[gd_scene load_steps=2 format=3 uid="uid://bxkvm9yx4nwqp"]

[ext_resource type="Script" path="res://scripts/debug_overlay.gd" id="1"]

[node name="DebugOverlay" type="CanvasLayer"]
layer = 128
script = ExtResource("1")

[node name="DebugPanel" type="Panel" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -600.0
offset_right = 520.0
offset_bottom = -20.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="DebugPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DebugText" type="RichTextLabel" parent="DebugPanel/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Debug Info"
fit_content = true
scroll_active = false

[node name="PerformancePanel" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 320.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="PerformancePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PerformanceText" type="RichTextLabel" parent="PerformancePanel/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Performance Info"
fit_content = true
scroll_active = false
